Search results translation - hacky fixes for button issues on mobile

--- a/scss/careers.scss
+++ b/scss/careers.scss
@@ -252,6 +252,22 @@ body.IGv2 {
     margin-top: 0;
     margin-bottom: 2.5rem;
 
+    .buttons-column .phone {
+      @media (max-width: 480px) {
+        width: 100% !important;
+        margin-bottom: 5px;
+      }
+    }
+
+    .outline-btn.email, .outline-btn.phone {
+      min-width: 50% !important;
+      text-align: center !important;
+
+      @media (max-width: 480px) {
+        width: 100% !important;
+      }
+    }
+
     .map-container {
       margin-bottom: 25px;
     }
@@ -2848,7 +2864,6 @@ body.IGv2 {
 
   }
 }
-
 
 body.IGv2.fr {
   .mobile-bottom-bar.small-12 {
